# gyantra

./: .env  .gitignore  README.md  app.py  chat.py  create_vector_store.py  main.py  pyproject.toml  requirements.txt  setup.py  vector.py
services/: chat_service.py  vector_service.py
vectors/: index.faiss  index.pkl
