[project]
name = "gyantra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langchain-unstructured[local]>=0.1.5",
    "langchain[google-genai]>=0.3.25",
    "pdfminer>=20191125",
    "python-dotenv>=1.1.0",
    "python-magic>=0.4.27",
    "streamlit>=1.45.1",
    "unstructured-client>=0.25.9",
    "unstructured[pdf]>=0.17.2",
    "uvicorn>=0.34.2",
]
