[project]
name = "gyantra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "google-genai>=1.15.0",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "pypdf>=5.5.0",
    "streamlit>=1.45.1",
]
